[package]
name = "parse_kubectl_time"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parse time strings from kubectl commands in seconds, e.g., 2m10s -> 130"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
